--- a/shared-style.css
+++ b/shared-style.css
@@ -27,7 +27,7 @@ h1 {
     color: #e65100;
 }
 a.button, button {
-    display: block;
+    display: inline-block;
     background: #e65100;
     color: white;
     text-decoration: none;
@@ -40,7 +40,9 @@ a.button, button {
     border: none;
     transition: background 0.3s;
     font-size: 16px;
+    text-align: center;
 }
+
 a.button:hover, button:hover {
     background: #cc4b00;
 }
