--- a/shared-style.css
+++ b/shared-style.css
@@ -76,13 +76,16 @@ footer {
         font-size: 20px;
     }
     select {
+        line-height: 1.5;
         font-size: 22px;
-        padding: 18px;
+        padding: 20px;
+        min-height: 60px;
     }
     a.button, button {
         font-size: 22px;
         padding: 22px;
         border-radius: 14px;
+        min-height: 60px;
     }
     footer {
         font-size: 16px;
