--- a/shared-style.css
+++ b/shared-style.css
@@ -82,12 +82,13 @@ footer {
 }
 
 /* Mobile-friendly styling */
-@media (max-width: 600px) {
+@media (max-width: 900px) {
     body {
         font-size: 24px;
     }
 
     .container {
+        height: 100vh;
         min-height: 100vh;
         display: flex;
         flex-direction: column;
