--- a/shared-style.css
+++ b/shared-style.css
@@ -22,7 +22,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to bottom, #fdfdfd, #f2f2f2, #eaeaea);
+    background: linear-gradient(to bottom, #eaeaea, #525252, #3D3D3D);
 }
 
 /* Header stays fixed */
@@ -96,7 +96,7 @@ button, a.button {
     width: 100%;
     max-width: 600px;
     min-height: 70px;
-    background: #e65100;
+    background: #F97526;
     color: white;
     border: none;
     border-radius: 14px;
