--- a/shared-style.css
+++ b/shared-style.css
@@ -59,7 +59,7 @@ h1 {
     line-height: 1.3;
     max-width: 90%;
     margin: 0 auto 20px;
-    color: #e65100;
+    color: #F97526;
 }
 
 .subheading {
@@ -114,7 +114,7 @@ button:hover, a.button:hover {
 
 /* Map section specific container */
 .map-container {
-    background: linear-gradient(to bottom, #ffffff, #f2f2f2);
+    background: linear-gradient(to bottom, #eaeaea, #525252, #3D3D3D);
     padding: 40px 20px;
     border-top: 1px solid #ddd;
     text-align: center;
