--- a/shared-style.css
+++ b/shared-style.css
@@ -33,7 +33,12 @@ header {
     background: #000;
     padding: 20px;
     text-align: center;
-    border-bottom: 1px solid #ddd;
+}
+header::after {
+    content: "";
+    display: block;
+    height: 4px; /* thickness of the gradient line */
+    background: linear-gradient(to right, #000000, #F97526);
 }
 
 header img {
@@ -131,7 +136,7 @@ button:hover, a.button:hover {
 
 footer {
     font-size: 16px;
-    color: #777;
+    color: #1D1D1D;
     text-align: center;
     padding: 20px 0;
 }
