--- a/shared-style.css
+++ b/shared-style.css
@@ -160,7 +160,7 @@ footer {
 }
 .snap-container {
     scroll-snap-type: y mandatory;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 100vh;
     scroll-behavior: smooth;
 }
