--- a/shared-style.css
+++ b/shared-style.css
@@ -9,6 +9,18 @@ html, body {
   font-size: 24px;
 }
 
+body > main > section {
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(to bottom, #3D3D3D, #525252, #eaeaea);
+    padding: 40px 20px;
+    box-sizing: border-box;
+}
+
 .snap-container {
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
@@ -25,18 +37,6 @@ html, body {
   background: linear-gradient(to bottom, #3D3D3D, #525252, #eaeaea);
   padding: 40px 20px;
   box-sizing: border-box;
-}
-
-section {
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(to bottom, #3D3D3D, #525252, #eaeaea);
-    padding: 40px 20px;
-    box-sizing: border-box;
 }
 
 header {
