--- a/shared-style.css
+++ b/shared-style.css
@@ -4,6 +4,7 @@ html, body {
     padding: 0;
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
+    overflow-x: hidden;
     display: block;
     font-family: Arial, sans-serif;
     background: #eaeaea;
@@ -28,7 +29,7 @@ section {
 .tall-section {
    min-height: auto;
    height: auto;
-   padding: 80px 10px;
+   padding: 360px 10px;
    background: linear-gradient(to bottom, #3D3D3D, #525252, #eaeaea);
    display: flex;
    justify-content: flex-start;
