--- a/shared-style.css
+++ b/shared-style.css
@@ -1,7 +1,7 @@
 html, body {
     height: 100%;
     margin: 0;
-    padding: 40px 0;
+    padding: 0;
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
     overflow-x: hidden;
