--- a/shared-style.css
+++ b/shared-style.css
@@ -40,7 +40,7 @@ section {
 
 
 header {
-    position: sticky;
+    position: static;
     z-index: 10;
     background: #000;
     text-align: center;
