--- a/shared-style.css
+++ b/shared-style.css
@@ -14,7 +14,7 @@ html, body {
 section {
     min-height: 100vh;
     width: 100%;
-    display: flex;
+    display: block;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -35,7 +35,7 @@ section {
 }
 
 header {
-    position: relative;
+    position: static;
     top: 0;
     left: 0;
     width: 100%;
@@ -77,29 +77,30 @@ h1 {
     font-size: 26px;
     line-height: 1.3;
     max-width: 90%;
-    margin: 0 auto 20px;
+    margin: -30px auto 20px;
     color: #F97526;
+    margin-bottom: 60px;
 }
 
 .subheading {
     font-size: 18px;
     color: #FFFFFF;
     font-style: italic;
-    margin-top: -10px;
-    margin-bottom: 30px;
+    margin-top: -30px;
+    margin-bottom: 120px;
 }
 
 p {
     font-size: 20px;
     font-weight: 400;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
     color: #FFFFFF;
 }
 
 select {
     font-size: 22px;
     padding: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
     width: 100%;
     max-width: 600px;
     min-height: 120px;
@@ -125,7 +126,7 @@ button, a.button {
     cursor: pointer;
     transition: background 0.3s ease;
     display: inline-block;
-    margin-bottom: 26px;
+    margin-bottom: 100px;
 }
 
 button:hover, a.button:hover {
@@ -136,6 +137,7 @@ footer {
     font-size: 16px;
     color: #1D1D1D;
     text-align: center;
+    margin-top: 10px;
     padding: 20px 0;
 }
 
