--- a/shared-style.css
+++ b/shared-style.css
@@ -161,8 +161,13 @@ footer {
     font-size: 20px;
     width: 100%;
     border: none;
-    outline: none;
+    border-radius: 14px;
+    font-weight: bold;
+    letter-spacing: 0.5px;
     cursor: pointer;
+    transition: background 0.3s ease;
+    display: inline-block;
+    margin-bottom: 20px;
 }
 
 .accordion-content {
