--- a/shared-style.css
+++ b/shared-style.css
@@ -26,7 +26,7 @@ section {
 .tall-section {
     height: auto;
     padding: 40px 20px;
-    background: linear-gradient(to bottom, #3D3D3D, #525252, #eaeaea);
+    background: #eaeaea;
     display: flex;
     justify-content: flex-start;
     align-items: center;
