--- a/shared-style.css
+++ b/shared-style.css
@@ -77,7 +77,7 @@ h1 {
     font-size: 26px;
     line-height: 1.3;
     max-width: 90%;
-    margin: -30px auto 20px;
+    margin: -60px auto 20px;
     color: #F97526;
     margin-bottom: 60px;
 }
@@ -184,6 +184,10 @@ footer {
   padding: 20px;
 }
 
+h2 {
+  color: #F97526;
+}
+
 #feedback-form textarea {
   width: 90%;
   max-width: 500px;
@@ -204,6 +208,14 @@ footer {
 .quote-footer {
   margin-top: 50px;
   text-align: center;
+  color: #525252;
+}
+
+p.quote {
+  color: #525252;
+}
+
+p.quote-author {
   color: #525252;
 }
 
