--- a/shared-style.css
+++ b/shared-style.css
@@ -231,6 +231,12 @@ p.quote-author {
   width: 80%;
   max-width: 300px;
   text-align: center;
+  padding: 10px 0;
+  font-size: 16px;
+  text-align: center;
+  box-sizing: border-box;
+  line-height: 1.2;
+  border-radius: 10px;
 }
 
 @media (min-width: 900px) {
