--- a/shared-style.css
+++ b/shared-style.css
@@ -231,12 +231,12 @@ p.quote-author {
   width: 100%;
   max-width: 600px;
   text-align: center;
-  padding: 10px 0 auto;
+  padding: 16px;
   font-size: 24px;
   text-align: center;
   box-sizing: border-box;
   line-height: 1.2;
-  border-radius: 10px;
+  border-radius: 14px;
 }
 
 @media (min-width: 900px) {
