--- a/shared-style.css
+++ b/shared-style.css
@@ -239,6 +239,26 @@ p.quote-author {
   border-radius: 14px;
   margin-bottom: 20px;
 }
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+  margin-bottom: 40px;
+}
+.cred-box {
+  background-color: #000;
+  color: #fff;
+  padding: 12px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  font-size: 14px;
+  cursor: pointer;
+}
+.cred-box small {
+  font-size: 11px;
+  color: #bbb;
+}
 
 @media (min-width: 900px) {
     body { font-size: 18px; }
