--- a/shared-style.css
+++ b/shared-style.css
@@ -239,6 +239,26 @@ p.quote-author {
   border-radius: 14px;
   margin-bottom: 20px;
 }
+.training-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-top: 60px;
+}
+
+.training-buttons .button {
+  width: 100%;
+  max-width: 600px;
+  text-align: center;
+  padding: 16px;
+  font-size: 24px;
+  text-align: center;
+  box-sizing: border-box;
+  line-height: 1.2;
+  border-radius: 14px;
+  margin-bottom: 20px;
+}
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
