--- a/shared-style.css
+++ b/shared-style.css
@@ -246,6 +246,19 @@ p.quote-author {
   gap: 10px;
   margin-bottom: 30px;
 }
+.small-button {
+  background: #F97526;
+  color: #fff;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 24px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  transition: background 0.3s ease;
+  cursor: pointer;
+        }
 
 .training-buttons {
   display: flex;
