--- a/shared-style.css
+++ b/shared-style.css
@@ -246,7 +246,7 @@ p.quote-author {
   gap: 10px;
   margin-bottom: 30px;
 }
-.small-button {
+.role-grid .small-button {
   background: #F97526;
   color: #fff;
   padding: 10px;
