--- a/shared-style.css
+++ b/shared-style.css
@@ -244,11 +244,14 @@ p.quote-author {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
-  margin-bottom: 50px;
+  justify-content: center;
+  margin-bottom: 0 auto 50px auto;
+  max-width: 600px
+  width: 100%;
 }
 .role-grid .button {
   text-align: center;
-  padding: 10px auto;
+  padding: 15px;
   margin: 5px 5px;
   font-size: 24px;
   text-align: center;
