--- a/shared-style.css
+++ b/shared-style.css
@@ -242,7 +242,7 @@ p.quote-author {
 
 .role-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, minmax(140px, 1fr));
   gap: 20px;
   justify-content: center;
   margin-bottom: 0 auto 50px auto;
