--- a/shared-style.css
+++ b/shared-style.css
@@ -334,6 +334,46 @@ p.quote-author {
     cursor: pointer !important;
 }
 
+.feedback-popup {
+  display: none; 
+  position: fixed;
+  z-index: 999;
+  left: 0; top: 0; width: 100%; height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.feedback-content {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 90%;
+  max-width: 400px;
+  text-align: center;
+}
+
+.feedback-content textarea {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 10px;
+  resize: none;
+}
+
+.feedback-content .button {
+  margin: 5px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #FF6600;
+  color: white;
+  cursor: pointer;
+}
+
+.feedback-content .button:hover {
+  background-color: #cc5200;
+}
+
+
 @media (min-width: 900px) {
     body { font-size: 18px; }
     h1 { font-size: 32px; }
