--- a/shared-style.css
+++ b/shared-style.css
@@ -441,6 +441,7 @@ p.quote-author {
 h5 {
     font-size: 36px;
     line-height: 1.3;
+    max-width: 650px;
     max-width: 90%;
     margin: -30px auto 20px;
     color: #F97526;
